Bug 158658 - FILEOPEN DOCX/DOC/RTF Tabs closing header paragraph are wrapped and not flowing outside the page area
Summary: FILEOPEN DOCX/DOC/RTF Tabs closing header paragraph are wrapped and not flowi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords:
Depends on:
Blocks: DOCX-Header-Footer DOC-Header-Footer RTF-Header-Footer DOCX-compatibilityMode-15
  Show dependency treegraph
 
Reported: 2023-12-12 11:04 UTC by Gabor Kelemen (Collabora)
Modified: 2025-04-17 04:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2010 (14.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-12-12 11:04 UTC, Gabor Kelemen (Collabora)
Details
The same example in RTF format (33.75 KB, application/msword)
2023-12-12 11:05 UTC, Gabor Kelemen (Collabora)
Details
The docx and rtf files in Word 2016 and Writer (103.11 KB, image/png)
2023-12-12 11:06 UTC, Gabor Kelemen (Collabora)
Details
The example file converted to compatibilityMode 15 in Word 2016 (16.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-12-12 11:06 UTC, Gabor Kelemen (Collabora)
Details
The C15 docx and the same file in doc format in Word 2016 and Writer (114.86 KB, image/png)
2023-12-12 11:08 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-12-12 11:04:48 UTC
Created attachment 191377 [details]
Example file from Word 2010

Attached docx file contains several tabs in the header at the end of the paragraph.
In Word these are not wrapped in case of RTF and DOCX < compatibilityMode 15, but in Writer they are, and this makes the header a lot taller than in Word.
In DOCX compatibilityMode 15 the rendering of Writer and Word matches, also since 3.3 - so probably it was not "fixed ~recently" but Word started to match Writers (sane) behavior.

1. Open the attached DOCX and RTF files
-> headers text is wrapped into multiple lines, but they should flow out of the pages right margin

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0ddd9f7e055a0c1ecb120de3e40c3fdb8373e9dc
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

and all the way back to 3.3
Comment 1 Gabor Kelemen (Collabora) 2023-12-12 11:05:27 UTC
Created attachment 191378 [details]
The same example in RTF format
Comment 2 Gabor Kelemen (Collabora) 2023-12-12 11:06:01 UTC
Created attachment 191379 [details]
The docx and rtf files in Word 2016 and Writer
Comment 3 Gabor Kelemen (Collabora) 2023-12-12 11:06:46 UTC
Created attachment 191380 [details]
The example file converted to compatibilityMode 15 in Word 2016
Comment 4 Gabor Kelemen (Collabora) 2023-12-12 11:08:22 UTC
Created attachment 191381 [details]
The C15 docx and the same file in doc format in Word 2016 and Writer

C15 DOCX is good, and doc is a bit differently bad -> another report.
Comment 5 Dieter 2023-12-27 11:29:03 UTC
I confirm it with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40617d867346956588ac023511f31210107217f4
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 6 Commit Notification 2024-06-14 11:37:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/10d753b8aadb50ec4309551b97d4cf2163ea3e3d

tdf#158658 sw: text formatting: try to make TabOverMargin more crazy

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-14 11:37:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/69d873e1c46f3cc8c524e18ac5a307a8d32ddd0f

tdf#158658 sw: text formatting: make TabOverMargin even more crazy

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2024-06-14 12:01:49 UTC
should be fixed on master

please file separate bugs for tabs in compatibilityMode >= 15, that works quite differently
Comment 9 Commit Notification 2024-06-14 14:33:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8b7ec831bf787dab1d24d7b8fc4348e4dd37edc8

tdf#158658 sw: text formatting: try to make TabOverMargin more crazy

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-06-14 14:33:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9361385beb38d718726bfe6264fd49d940c2125c

tdf#158658 sw: text formatting: make TabOverMargin even more crazy

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-06-14 17:44:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/a726a78fa96e25e12176129b2eabea779126ee56

tdf#158658 sw: text formatting: try to make TabOverMargin more crazy

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-06-14 17:44:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3822db0a7494d8081b04d80b1f1d797f2b71ef0e

tdf#158658 sw: text formatting: make TabOverMargin even more crazy

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.