tdf#158658 sw: text formatting: try to make TabOverMargin more crazy

... to better match Word's formatting; this commit is not based on a
complete diagnosis of Word's compatibility-mode tab-in-margin
formatting disorders.

1. in SwTabPortion::PreFormat() allow a left aligned tab beyond the
   width of the paragraph, like already done for TabOverSpacing

2. in SwTextFormatInfo::GetLineWidth() add some extra width to the
   paragraph so text can be hidden in the right margin.
   (it's very unclear what Word does here exactly, in one case it puts
   339 additional "a" characters in the margin but then the 340th "a"
   goes onto a new line...)

3. in SwTextFormatter::NewTabPortion() allow manual tab stops to be
   positioned beyond the width of the paragraph, like already done
   for TabOverSpacing

testTdf118672, testTdf120287b, testTdf120287c fail but the files,
converted to RTF, render in Word 2013 basically the same as in Writer
with this change.

Change-Id: I5f74ced09c704bfd9967df61351c8bac6540e714
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168819
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 10d753b8aadb50ec4309551b97d4cf2163ea3e3d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168863
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>